Updated Task Gantt view, this now works using Char.JS.  The original intention was to use Blazorise.Charts, but for this particular view I'm calling Chart.JS directly as it makes the configuration easier.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/CustomFieldGroup/CustomFieldGroups.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/CustomFieldGroup/CustomFieldGroups.razor
@@ -18,7 +18,7 @@
         </BreadcrumbItem>
     </Breadcrumb>
 
-    <Card Margin="Margin.Is4.OnY">
+    <Card Margin="Margin.Is4.OnY"  Shadow="Shadow.Default">
         <CardHeader>
             <CardTitle>@LanguageHelper.GetTitle(langQueryList, 10124)</CardTitle>
         </CardHeader>
