--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskGroup.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskGroup.razor
@@ -30,7 +30,7 @@
         <Form>
             <Row>
                 <Column>
-                    <Card Margin="Margin.Is4.OnY">
+                    <Card Margin="Margin.Is4.OnY"  Shadow="Shadow.Default">
                         <CardHeader>
                             <CardTitle>@GetBreadCrumbTitle()</CardTitle>
                         </CardHeader>
