--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/CustomFieldGroup/CustomFieldGroup.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/CustomFieldGroup/CustomFieldGroup.razor
@@ -26,7 +26,7 @@
         <Form>
             <Row>
                 <Column>
-                    <Card Margin="Margin.Is4.OnY">
+                    <Card Margin="Margin.Is4.OnY"  Shadow="Shadow.Default">
                         <CardHeader>
                             <CardTitle>@LanguageHelper.GetTitle(langQueryList, 11001)</CardTitle>
                         </CardHeader>
