--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskItemView.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskItemView.razor
@@ -8,7 +8,7 @@
 
 @if (taskHead != null)
 {
-    <Card Margin="Margin.Is4.OnY">
+    <Card Margin="Margin.Is4.OnY" Shadow="Shadow.Default">
         <CardHeader>
             <CardTitle>
                 @taskHead.Title
