--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -5,6 +5,7 @@
 @using Blazorise.Components
 @using Blazorise.Snackbar
 @using Blazorise.SpinKit
+@*@using Blazorise.Charts*@
 @using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
