--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
@@ -126,7 +126,7 @@
 }
 
 @code {
-    bool planVisible = false;
+    bool planVisible = true;
 
     [Parameter]
     public string Id { get; set; }
