--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarUser.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/Navigation/SideBarUser.razor
@@ -11,6 +11,9 @@
             <BarDropdownItem To="user/">
                 @LanguageHelper.GetTitle(langQueryList, 10117)
             </BarDropdownItem>
+            <BarDropdownItem To="token/">
+                API Token
+            </BarDropdownItem>
         </BarDropdownMenu>
     </BarDropdown>
 </BarItem>
