--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/_Imports.razor
@@ -32,6 +32,7 @@
 @using PanacheSoftware.UI.Client.Blazor.Pages.Setting
 @using PanacheSoftware.UI.Client.Blazor.Pages.User
 @using PanacheSoftware.UI.Client.Blazor.Pages.PLTask
+@using PanacheSoftware.UI.Client.Blazor.Pages.PLTemplate
 @using PanacheSoftware.UI.Client.Blazor.Shared.Header
 @using PanacheSoftware.Core.Domain.API.Language
 @using PanacheSoftware.UI.Client.Blazor.Helpers
